// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Badge Bithomp 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3fa3b5",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        Bithomp
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3fa3b5",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        Bithomp
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3fa3b5",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        Bithomp
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Badge PayId 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#38D39F",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        PayID
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#38D39F",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        PayID
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#38D39F",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        PayID
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Badge Success 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3BDC96",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        [missing "en.global.success" translation]
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3BDC96",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        [missing "en.global.success" translation]
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3BDC96",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        [missing "en.global.success" translation]
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Badge XRPLNS 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3767CE",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        XRPLNS
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3767CE",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        XRPLNS
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3767CE",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        XRPLNS
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots Badge XRPScan 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#004a7c",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 18,
            },
          ]
        }
      >
        XRPScan
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#004a7c",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 25.714285714285715,
            },
          ]
        }
      >
        XRPScan
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "marginTop": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#004a7c",
          "borderRadius": 5,
          "marginLeft": 5,
          "opacity": 1,
          "paddingHorizontal": 5,
          "paddingVertical": 1,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#ffffff",
              "fontFamily": "ProximaNova-Bold",
              "fontSize": 18,
            },
            Object {
              "fontSize": 32.14285714285714,
            },
          ]
        }
      >
        XRPScan
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots EventsFilterChip default 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "flexWrap": "wrap",
          "left": 0,
          "paddingTop": 20,
          "right": 0,
        },
      ]
    }
  >
    <View
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3052FF",
          "borderColor": "transparent",
          "borderRadius": 20,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 47.14285714285714,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginLeft": 2,
          "marginRight": 0,
          "marginTop": 5,
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={false}
          allowFontScaling={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 35.357142857142854,
                "paddingHorizontal": 5,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "fontSize": 28.928571428571427,
              },
              undefined,
              undefined,
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "ProximaNova-Bold",
                  "fontSize": 27,
                  "paddingRight": 2,
                },
              ],
            ]
          }
        >
          &lt; 25 XRP
        </Text>
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "IconX",
            }
          }
          style={
            Array [
              Object {
                "height": 31.428571428571427,
                "width": 31.428571428571427,
              },
              Array [
                Object {
                  "marginLeft": 3,
                  "tintColor": "#ffffff",
                },
                undefined,
                undefined,
                Object {
                  "tintColor": "#ffffff",
                },
              ],
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3052FF",
          "borderColor": "transparent",
          "borderRadius": 20,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 47.14285714285714,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginLeft": 2,
          "marginRight": 0,
          "marginTop": 5,
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={false}
          allowFontScaling={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 35.357142857142854,
                "paddingHorizontal": 5,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "fontSize": 28.928571428571427,
              },
              undefined,
              undefined,
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "ProximaNova-Bold",
                  "fontSize": 27,
                  "paddingRight": 2,
                },
              ],
            ]
          }
        >
          [missing "en.global.income" translation]
        </Text>
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "IconX",
            }
          }
          style={
            Array [
              Object {
                "height": 31.428571428571427,
                "width": 31.428571428571427,
              },
              Array [
                Object {
                  "marginLeft": 3,
                  "tintColor": "#ffffff",
                },
                undefined,
                undefined,
                Object {
                  "tintColor": "#ffffff",
                },
              ],
            ]
          }
        />
      </View>
    </View>
    <View
      accessibilityRole="button"
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "backgroundColor": "#3052FF",
          "borderColor": "transparent",
          "borderRadius": 20,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 47.14285714285714,
          "justifyContent": "center",
          "marginBottom": 5,
          "marginLeft": 2,
          "marginRight": 0,
          "marginTop": 5,
          "opacity": 1,
          "paddingHorizontal": 15,
          "paddingLeft": 10,
          "paddingRight": 10,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
          ]
        }
      >
        <Text
          adjustsFontSizeToFit={false}
          allowFontScaling={false}
          numberOfLines={2}
          style={
            Array [
              Object {
                "color": "#ffffff",
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 35.357142857142854,
                "paddingHorizontal": 5,
                "textAlign": "center",
              },
              undefined,
              undefined,
              undefined,
              undefined,
              Object {
                "fontSize": 28.928571428571427,
              },
              undefined,
              undefined,
              Array [
                Object {
                  "color": "#ffffff",
                  "fontFamily": "ProximaNova-Bold",
                  "fontSize": 27,
                  "paddingRight": 2,
                },
              ],
            ]
          }
        >
          [missing "en.global.payment" translation]
        </Text>
        <Image
          resizeMode="contain"
          source={
            Object {
              "uri": "IconX",
            }
          }
          style={
            Array [
              Object {
                "height": 31.428571428571427,
                "width": 31.428571428571427,
              },
              Array [
                Object {
                  "marginLeft": 3,
                  "tintColor": "#ffffff",
                },
                undefined,
                undefined,
                Object {
                  "tintColor": "#ffffff",
                },
              ],
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots RecipientElement Selected 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="recipient-rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#F3F6FA",
            "borderColor": "#F3F6FA",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "marginBottom": 8,
            "padding": 5,
          },
          Object {
            "backgroundColor": "rgba(48,82,255,0.06)",
            "borderColor": "#3052FF",
            "borderWidth": 2,
          },
          undefined,
        ]
      }
    >
      <Image
        borderRadius={10}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://xumm.app/avatar/rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1_180_50.png",
          }
        }
        style={
          Array [
            Object {},
            Object {
              "height": 85.71428571428571,
              "width": 85.71428571428571,
            },
            false,
          ]
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "left": 0,
              "right": 0,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "ProximaNova-Bold",
                  "fontSize": 32.14285714285714,
                },
                Object {
                  "color": "#3052FF",
                },
              ]
            }
          >
            Wietse
          </Text>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#3fa3b5",
                "borderRadius": 5,
                "marginLeft": 5,
                "opacity": 1,
                "paddingHorizontal": 5,
                "paddingVertical": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "ProximaNova-Bold",
                    "fontSize": 18,
                  },
                  Object {
                    "fontSize": 18,
                  },
                ]
              }
            >
              Bithomp
            </Text>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#606885",
                "fontFamily": "UbuntuMono-Regular",
                "fontSize": 25.71428571428571,
              },
              Object {
                "color": "#3052FF",
              },
            ]
          }
        >
          rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots RecipientElement WithSource 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="recipient-rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#F3F6FA",
            "borderColor": "#F3F6FA",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "marginBottom": 8,
            "padding": 5,
          },
          undefined,
          undefined,
        ]
      }
    >
      <Image
        borderRadius={10}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://xumm.app/avatar/rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1_180_50.png",
          }
        }
        style={
          Array [
            Object {},
            Object {
              "height": 85.71428571428571,
              "width": 85.71428571428571,
            },
            false,
          ]
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "left": 0,
              "right": 0,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "ProximaNova-Bold",
                  "fontSize": 32.14285714285714,
                },
                null,
              ]
            }
          >
            Wietse
          </Text>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": "#3fa3b5",
                "borderRadius": 5,
                "marginLeft": 5,
                "opacity": 1,
                "paddingHorizontal": 5,
                "paddingVertical": 1,
              }
            }
          >
            <Text
              style={
                Array [
                  Object {
                    "color": "#ffffff",
                    "fontFamily": "ProximaNova-Bold",
                    "fontSize": 18,
                  },
                  Object {
                    "fontSize": 18,
                  },
                ]
              }
            >
              Bithomp
            </Text>
          </View>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#606885",
                "fontFamily": "UbuntuMono-Regular",
                "fontSize": 25.71428571428571,
              },
              null,
            ]
          }
        >
          rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots RecipientElement default 1`] = `
<View
  style={
    Object {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
    testID="recipient-rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "backgroundColor": "#F3F6FA",
            "borderColor": "#F3F6FA",
            "borderRadius": 12,
            "borderWidth": 2,
            "flexDirection": "row",
            "marginBottom": 8,
            "padding": 5,
          },
          undefined,
          undefined,
        ]
      }
    >
      <Image
        borderRadius={10}
        resizeMode="cover"
        source={
          Object {
            "uri": "https://xumm.app/avatar/rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1_180_50.png",
          }
        }
        style={
          Array [
            Object {},
            Object {
              "height": 85.71428571428571,
              "width": 85.71428571428571,
            },
            false,
          ]
        }
      />
      <View
        style={
          Object {
            "paddingLeft": 10,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "left": 0,
              "right": 0,
            }
          }
        >
          <Text
            adjustsFontSizeToFit={true}
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000000",
                  "fontFamily": "ProximaNova-Bold",
                  "fontSize": 32.14285714285714,
                },
                null,
              ]
            }
          >
            Wietse
          </Text>
          <View
            accessible={true}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              Object {
                "alignSelf": "center",
                "backgroundColor": undefined,
                "borderRadius": 5,
                "marginLeft": 5,
                "opacity": 1,
                "paddingHorizontal": 5,
                "paddingVertical": 1,
              }
            }
          />
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#606885",
                "fontFamily": "UbuntuMono-Regular",
                "fontSize": 25.71428571428571,
              },
              null,
            ]
          }
        >
          rwiETSee2wMz3SBnAG8hkMsCgvGy9LWbZ1
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Storyshots SegmentButton Three Button 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#F0F3FF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "row",
          "height": 139.28571428571428,
          "justifyContent": "space-between",
          "overflow": "hidden",
        },
        undefined,
      ]
    }
  >
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "#F3F6FA",
          "borderRadius": 12,
          "flex": 1,
          "marginVertical": 15,
          "opacity": 1,
          "shadowColor": "#ffffff",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.1,
          "shadowRadius": 4,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 10,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#606885",
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 32.14285714285714,
              },
              Object {
                "color": "#000000",
              },
            ]
          }
        >
          All
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "marginVertical": 15,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 10,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#606885",
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 32.14285714285714,
              },
              false,
            ]
          }
        >
          Planned
        </Text>
      </View>
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "flex": 1,
          "marginVertical": 15,
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "justifyContent": "center",
              "paddingHorizontal": 10,
            },
          ]
        }
      >
        <Text
          numberOfLines={1}
          style={
            Array [
              Object {
                "color": "#606885",
                "fontFamily": "ProximaNova-Bold",
                "fontSize": 32.14285714285714,
              },
              false,
            ]
          }
        >
          Requests
        </Text>
      </View>
    </View>
  </View>
</View>
`;
